e-commerce-gitops/kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce
  labels:
    app: ecommerce
    environment: dev
