e-commerce-gitops/kubernetes/mongodb-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: mongodb
  namespace: ecommerce

spec:

  serviceName: mongodb

  replicas: 1

  selector:
    matchLabels:
      app: mongodb

  template:

    metadata:
      labels:
        app: mongodb

    spec:

      containers:

        - name: mongodb

          image: mongo:8

          ports:

            - name: mongodb
              containerPort: 27017

          resources:

            requests:
              cpu: "250m"
              memory: "512Mi"

            limits:
              cpu: "1000m"
              memory: "1Gi"

          volumeMounts:

            - name: mongodb-data
              mountPath: /data/db

  volumeClaimTemplates:

    - metadata:
        name: mongodb-data

      spec:

        accessModes:
          - ReadWriteOnce

        storageClassName: ecommerce-ebs

        resources:

          requests:
            storage: 10Gi
