e-commerce-gitops/kubernetes/mongodb-service.yml
apiVersion: v1
kind: Service

metadata:
  name: mongodb
  namespace: ecommerce

spec:

  clusterIP: None

  selector:
    app: mongodb

  ports:

    - name: mongodb
      port: 27017
      targetPort: 27017
