e-commerce-gitops/kubernetes/service.yml
apiVersion: v1
kind: Service

metadata:
  name: ecommerce-service
  namespace: ecommerce

  labels:
    app: ecommerce-app

spec:
  type: ClusterIP

  selector:
    app: ecommerce-app

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
