e-commerce-gitops/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ecommerce-ingress
  namespace: ecommerce

  annotations:

    # Internet-facing ALB
    alb.ingress.kubernetes.io/scheme: internet-facing

    # Send traffic directly to Pod IPs
    alb.ingress.kubernetes.io/target-type: ip

    # HTTP + HTTPS listeners
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'

    # ACM certificate
    alb.ingress.kubernetes.io/certificate-arn: "YOUR_ACM_CERTIFICATE_ARN"

    # Redirect HTTP → HTTPS
    alb.ingress.kubernetes.io/ssl-redirect: "443"

spec:

  ingressClassName: alb

  rules:

    - host: shop.example.com

      http:

        paths:

          - path: /
            pathType: Prefix

            backend:

              service:
                name: ecommerce-service
                port:
                  number: 80
